--- a/shop.html
+++ b/shop.html
@@ -23,7 +23,14 @@
          background-color: red;
          color: white;
          text-align: center;
-
+      }
+      #posts{
+         margin: 10px;
+         padding: 5px;
+      }
+      #comments{
+         margin: 20px;
+         padding: 15px;
       }
    </style>
 </head>
@@ -40,6 +47,13 @@
 
    </ul>
    
+   <section id="posts">
+
+   </section>
+
+   <section id="comments">
+
+   </section>
 
 
 
