--- a/shop.html
+++ b/shop.html
@@ -32,6 +32,9 @@
          margin: 20px;
          padding: 15px;
       }
+      .post{
+         color: red;
+      }
    </style>
 </head>
 <body>
